--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
+    "react-telegram-webapp": "^0.1.5",
     "telegram-web-app": "^0.0.0",
+    "use-http": "^1.0.28",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
